0.02

0.01 2023-11-19T21:07:25+01:00
 - First version.