@@ -23,7 +23,7 @@ requires 'Class::Utils' => 0;
 requires 'Getopt::Std' => 0;
 requires 'MARC::File::XML' => '1.0.4';
 requires 'MARC::Leader' => 0;
-requires 'MARC::Leader::Print' => 0;
+requires 'MARC::Leader::Print' => 0.02;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/App-MARC-Leader/issues',
 resources 'homepage' => 'https://github.com/michal-josef-spacek/App-MARC-Leader';
 resources 'repository' => 'git://github.com/michal-josef-spacek/App-MARC-Leader';
