@@ -2,12 +2,16 @@ NAME
     marc-leader - Script to decode MARC leader from file or string.
 
 SYNOPSIS
-     marc-leader [-d] [-f marc_xml_file] [-h] [--version] [leader_string]
+     marc-leader [-a] [-d] [-f marc_xml_file] [-h] [--version] [leader_string]
 
 DESCRIPTION
     It supports MARC XML files now.
 
 ARGUMENTS
+    *       "-a"
+
+            Print with ANSI colors. Or use "NO_COLOR"/"COLOR" env variables.
+
     *       "-d"
 
             Don't print description.
