@@ -1,4 +1,5 @@
 0.02
+ - Add support of ANSI color output.
 
 0.01 2023-11-19T21:07:25+01:00
  - First version.
